--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,15 +13,25 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "People"
-  url = "#people"
-  weight = 20
+# [[main]]
+#  name = "People"
+#  url = "#people"
+#  weight = 20
 
 [[main]]
   name = "Publications"
   url = "#featured"
   weight = 40
+
+# [[main]]
+#  name = "Tutorials"
+#  url = "tutorials/"
+#  weight = 50
+
+[[main]]
+  name = "More about me"
+  url = "more_about/"
+  weight = 50
 
 [[main]]
   name = "Contact"
